--- a/_workers_next/src/locales/zh.json
+++ b/_workers_next/src/locales/zh.json
@@ -29,7 +29,7 @@
         "copyFailed": "复制失败",
         "common.credits": "积分",
         "credits": "积分",
-        "common.viewOrders": "查看订单",
+        "viewOrders": "查看订单",
         "inStock": "有货",
         "outOfStock": "缺货",
         "stock": "库存",
