--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -28,7 +28,7 @@
         "copied": "Copied!",
         "copyFailed": "Copy failed",
         "common.credits": "Credits",
-        "common.viewOrders": "View Orders",
+        "viewOrders": "View Orders",
         "credits": "Credits",
         "inStock": "in stock",
         "outOfStock": "Out of Stock",
