--- a/_workers_next/src/locales/en.json
+++ b/_workers_next/src/locales/en.json
@@ -34,6 +34,7 @@
         "credits": "Credits",
         "inStock": "in stock",
         "outOfStock": "Out of Stock",
+        "common.unlimited": "Unlimited",
         "stock": "Stock",
         "sold": "Sold",
         "buy": "Buy",
